
2023-01-26  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: generate field offsets and indexes as long long to
	  fix overflow in (actually unsupported) access to huge tables
	* cobc.c (process_env_copy_path): changed to do getenv itself and
	  to output ignored entries when running verbose

2023-01-23  David Declerck <david.declerck@ocamlpro.com>

	FR #429: option to specify conversion table via translation table file
	* cobc.c, flag.def, cobc.h: handle external table for "ebcdic-table"
	* codegen.c: generate code using the external table

2023-01-20  Simon Sobisch <simonsobisch@gnu.org>

	fixed bug #704: ANY LENGTH cannot have ref-mod, POS not context-sensitive
	* typeck.c (cb_build_identifier): skip compile-time check for length
	  on ANY LENGTH items
	* reserved.c (POS): now C/S to DISPLAY + ACCEPT with default wordlist

2023-01-18  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (cb_default_colseq, build_default_colseq, setup_default_colseq):
	  adjusted for general use, fixing Bug #861
	* parser.y (alphabet_name): added code-set names, building a collation
	* reserved.c (SEQUENCE): setting CB_CS_ALPHABET to allow code-name parsing
	* parser.y, reserved.c: changed reference from 202x to 2023

2023-01-16  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (occurs_index): only set VALUE 1 for defaultbyte == INIT
	* tree.h (CB_DEFAULT_BYTE_INIT, CB_DEFAULT_BYTE_NONE), config.c, field.c,
	  codegen.c: explicit defines instead of "only magic numbers"
	* tree.c (cb_build_initialize), tree.h (struct cb_initialize), codegen.c
	  (output_initialize_to_value): replaced flag_init_statement with statement
	* parser.y (setup_occurs_min_max): validate occurs_max limit
	* codegen.c (output_initialize_uniform): pass code-field instead of
	  re-evaluating it
	* codegen.c (output_initialize_multi_values): removed variable
	  "total_occurs" fixing Wunused-but-set-variable
	* codegen.c (output_stmt): dropped unused msgid