@@ -5,6 +5,8 @@
 	  fix overflow in (actually unsupported) access to huge tables
 	* cobc.c (process_env_copy_path): changed to do getenv itself and
 	  to output ignored entries when running verbose
+	* cobc.c (process_command_line): output ignored -I and -L options
+	  when running verbose
 
 2023-01-23  David Declerck <david.declerck@ocamlpro.com>
 
